@@ -7,8 +7,6 @@ Items large and small which remain to be worked on.
 * Add microtimer support for image processing operations so that the
   processing time for the last operation is immediately available.
 
-* Add support for ShaveImage().
-
 * Add support for FlattenImage() and OrderedDitherImage().
 
 * Add support for specifying a CMS color profile (ImageInfo
